fixed mobile line spacing

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ footer {
   margin-top: 2rem;
 }
 
+/* mobile view */
 @media (min-width: 0px) and (max-width: 640px) {
   body {
     min-height: 100vh;
@@ -161,54 +162,18 @@ footer {
     padding: 30px;
     background-color: hsl(179, 62%, 43%, 0.7);
   }
+  .title-1 {
+    line-height: 3;
+  }
+  .title-2 {
+    margin-top: 10px;
+    line-height: 1.3;
+  }
+  .top p {
+    line-height: 1.6;
+  }
   footer {
     margin-top: 4rem;
     margin-bottom: 2rem;
   }
 }
-/* 
-
-
-
-
-.container {
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.top {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px 10px 0 0;
-}
-.bottom {
-  color: white;
-  width: 100%;
-  border-radius: 0 0 10px 10px;
-  background-color: hsl(179, 62%, 43%);
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 220px;
-}
-
-.bottom-left {
-  margin-left: 40px;
-  text-align: left;
-  width: 50%;
-}
-.bottom-right {
-  background: hsl(179, 62%, 43%, 0.5);
-  width: 50%;
-}
-
-
-
- */
